# Home-Assistant-Property-Manager

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  hacs.json  pyproject.toml
custom_components/property_manager/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  gis.py  manifest.json  models.py  schedule_engine.py  sensor.py  services.py  services.yaml  store.py  strings.json
custom_components/property_manager/frontend/: property-manager-panel.js
custom_components/property_manager/translations/: en.json
dev-server/: server.py  test-mobile.js  test-page.js
frontend/: package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/src/: asset-detail.ts  dashboard-card.ts  map-engine.ts  models.ts  property-manager-panel.ts  schematic-renderer.ts  styles.ts
tests/: conftest.py  test_gis.py  test_models.py  test_schedule.py  test_services.py  test_store.py
